--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,9 +22,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
-  </head>
-  <body>
+
+
+</head>
+
+<body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -39,5 +39,15 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+
+<!-- twitch Embed Script -->
+<script src="https://embed.twitch.tv./embed/v1.js"></script>
+<script async src="https://platform.twitter.com/widgets.js" charSet="utf-8"></script>
+<script type="text/JavaScript">
+    var options = { width: "100%", height: "100%", channel: "infernowl", parent: [] }; var player = new Twitch.Player("twitch-embed", options); player.addEventListener(Twitch.Player.PLAYING, () => { console.log(JSON.stringify(player.getQualities())); });
+    player.addEventListener(Twitch.Player.ENDED, () => { player.setChannel("musicer13"); player.play(); }); player.addEventListener(Twitch.Player.OFFLINE, () => { player.setChannel("musicer13"); player.play(); });
+</script>
+<title>React Apps</title>
+
 </html>
