--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-
-
 </head>
 
 <body>
@@ -39,15 +37,18 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-</body>
 
-<!-- twitch Embed Script -->
+</body>
+<!-- twitch and twitter Embed Scripts -->
 <script src="https://embed.twitch.tv./embed/v1.js"></script>
 <script async src="https://platform.twitter.com/widgets.js" charSet="utf-8"></script>
 <script type="text/JavaScript">
-    var options = { width: "100%", height: "100%", channel: "infernowl", parent: [] }; var player = new Twitch.Player("twitch-embed", options); player.addEventListener(Twitch.Player.PLAYING, () => { console.log(JSON.stringify(player.getQualities())); });
-    player.addEventListener(Twitch.Player.ENDED, () => { player.setChannel("musicer13"); player.play(); }); player.addEventListener(Twitch.Player.OFFLINE, () => { player.setChannel("musicer13"); player.play(); });
+    var options = { width: "100%", height: "100%", channel: "infernowl", parent: [] }; var player = new Twitch.Player("twitch-embed", options); player.addEventListener(Twitch.Player.ENDED, () => { player.setChannel("awrie"); player.play(); }); player.addEventListener(Twitch.Player.OFFLINE,
+    () => { player.setChannel("awrie"); player.play(); });
 </script>
-<title>React Apps</title>
+
+<script type="css" src="../src/twitter-feed.css"></script>
+
+<title>InfernOwl</title>
 
 </html>
