--- a/public/index.html
+++ b/public/index.html
@@ -43,8 +43,10 @@
 <script src="https://embed.twitch.tv./embed/v1.js"></script>
 <script async src="https://platform.twitter.com/widgets.js" charSet="utf-8"></script>
 <script type="text/JavaScript">
-    var options = { width: "100%", height: "100%", channel: "infernowl", parent: [] }; var player = new Twitch.Player("twitch-embed", options); player.addEventListener(Twitch.Player.ENDED, () => { player.setChannel("awrie"); player.play(); }); player.addEventListener(Twitch.Player.OFFLINE,
-    () => { player.setChannel("awrie"); player.play(); });
+    var options = { width: "100%", height: "100%", channel: "infernowl", parent: [] }; 
+    var player = new Twitch.Player("twitch-embed", options); 
+    player.addEventListener(Twitch.Player.ENDED, () => { player.setColletion("GG_fWKMGLhaPsg"); player.setMuted(true); player.play(); }); 
+    player.addEventListener(Twitch.Player.OFFLINE,() => { player.setCollection("GG_fWKMGLhaPsg"); player.setMuted(true); player.play(); });
 </script>
 
 <script type="css" src="../src/twitter-feed.css"></script>
