--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
 <script type="text/JavaScript">
     var options = { width: "100%", height: "100%", channel: "infernowl", parent: [] }; 
     var player = new Twitch.Player("twitch-embed", options); 
-    player.addEventListener(Twitch.Player.ENDED, () => { player.setColletion("GG_fWKMGLhaPsg"); player.setMuted(true); player.play(); }); 
+    player.addEventListener(Twitch.Player.ENDED, () => { player.setCollection("GG_fWKMGLhaPsg"); player.setMuted(true); player.play(); }); 
     player.addEventListener(Twitch.Player.OFFLINE,() => { player.setCollection("GG_fWKMGLhaPsg"); player.setMuted(true); player.play(); });
 </script>
 
